--- a/style.css
+++ b/style.css
@@ -12,18 +12,18 @@ body {
     margin: auto;
     border: 1px solid red;
     width: 75%;
+    max-width: 1280px;
 }
-.header {
+.header, .first, .footer{
     background-color: #1F2937;
 }
 .headerBody {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px 0 10px;
+    /* padding: 0 10px 0 10px; */
 
 }
-
 .headerLink {
     display: flex;
     gap: 10px;
@@ -40,11 +40,11 @@ h1 {
     color: #F9F8FA;
 }
 
-.first {
+.firstBody {
     background-color: #1F2937;
     display: flex;
+    padding: 10% 0 10% 0;
 }
-
 .firstLeft {
     padding-right: 10px;
 }
@@ -52,13 +52,115 @@ h1 {
     font-size: 48px;
     margin: 0%;
 }
-
 .firstLeft p {
     color: #E5E7EB;
     margin: 0%;
+    font-size: 18px;
+    padding-right: 10%;
 }
-
 .firstRight img{
     width: 522px; 
     height: 238px;
+}
+.button {
+    background-color: #3882F6;
+    border-radius: 8px;
+    padding:10px 30px 10px 30px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    margin-top: 15px;
+    /* display: inline-block; */
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.secondBody h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 5%;
+}
+.column {
+    /* width: 50px;
+    height: 50px; */
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    text-align: center;
+    padding: 0 100px 8% 100px;
+    
+}
+.one p {
+    margin-top: 2%;
+    padding: 0 30px 0 30px;
+}
+.one img {
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+}
+
+.third{
+    background-color: #E5E7EB;
+}
+.thirdBody{
+    padding: 7%;
+    
+}
+.thirdBody .quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+}
+.thirdBody .author {
+    color: #1F2937;
+    font-size: 24px;
+    font-weight: 900;
+    text-align: right;
+}
+
+.fourBody {
+    padding: 5% 0 5% 0;
+}
+.blue{
+    border-radius: 10px;
+    border: 4px solid #3882F6;
+    background-color: #3882F6;
+    padding: 3% 8%;
+    display: flex;
+    justify-content: space-between;
+}
+.call{
+    color: white;
+    font-size: 24px;
+    font-weight: bolder;
+    margin: 0%;
+}
+.signup {
+    font-size: 20px;
+    color: #E5E7EB;
+    margin: 0%;
+}
+.signButton {
+    background-color: #3882F6;
+    border: 3px solid white;
+    border-radius: 10px;
+    padding:10px 30px 10px 30px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    margin-top: 15px;
+    font-size: 16px;
+    cursor: pointer;
+
+
+}
+
+.footerBody {
+    color: white;
+    text-align: center;
+    padding: 2%;
 }
